addGetFilmById_v1.8